Changes from Ant 1.1 to the current sources

Changes that could break older environments:
--------------------------------------------

* copying of support files in <javac> has been removed.

* the command line switches _not_ starting with - have been removed.

* Path and EnumeratedAttribute have been moved from
org.apache.tools.ant to org.apache.tools.ant.types.

* the class attribute of <java> has been removed.

* <patch> has lost some of its attributes.

* <java> and <cvs> have lost some undocumented attributes.

Other changes:
--------------

* New tasks: sql, genkey, cab.

* New tasks junit, mparse, execon. All pending documentation, most of
them pending review.

* <java> uses ClassLoader of its own in no-fork mode if a classpath is
specified.

* <style> will create the necessary target directories and reprocess
all files if the stylesheet changes.

* New data types fileset and patternset - expected to get a broader
use, pending documentation.

* You can specify environment variables to the exec task - pending
documentation.

* Get can check whether a remote file is actually newer than a local
copy before it starts a download (HTTP only).

* Added a -logger option to allow the class which performs logging to be 
specified on the command line.

* Added a -emacs option to tell the logger to leave out taskname adornments
on log output.

* <chmod> works on all files in parallel and supports multiple filesets.

Fixed bugs:
-----------

* <chmod> didn't work when used as a directory based task.

* Path, Available, Property didn't resolve relative filenames with
respect to the Project's basedir.

* Project didn't interpret the basedir attribute correctly in all
cases.

* Nested <src> in <javac> caused NullPointerException.

* Corrupt Zip- and Jar-files ar now deleted if the task fails.